# GitHubApi567

./: .travis.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  cli.py  fetcher.py
tests/: __init__.py  test_cli.py  test_fetching.py  test_output.py  test_response_parsing.py
tests/fixtures/: repos-list-1.json
